Add all templates from minimal

--- a/MVC/Views/ImageGallery/List.OverlayGallery.cshtml
+++ b/MVC/Views/ImageGallery/List.OverlayGallery.cshtml
@@ -1,30 +1,33 @@
-@model Telerik.Sitefinity.Frontend.Mvc.Models.ContentListViewModel
+﻿@model Telerik.Sitefinity.Frontend.Mvc.Models.ContentListViewModel
 
 @using Telerik.Sitefinity;
 @using Telerik.Sitefinity.Frontend.Mvc.Helpers;
+@using Telerik.Sitefinity.Frontend.Media.Mvc.Helpers
 @using Telerik.Sitefinity.Frontend.Media.Mvc.Models.ImageGallery;
 @using Telerik.Sitefinity.Modules.Pages;
 
-@Html.Script(ScriptRef.JQuery, "top")
+@Html.Script(ScriptRef.JQuery, "top", false)
 
-@Html.StyleSheet(Url.WidgetContent("assets/magnific/magnific-popup.css"), "head")
+@Html.StyleSheet(Url.WidgetContent("assets/magnific/magnific-popup.css"), "head", false)
 
-@Html.Script(Url.WidgetContent("assets/magnific/jquery.magnific-popup.min.js"), "bottom")
-@Html.Script(Url.WidgetContent("Mvc/Scripts/ImageGallery/overlay-gallery.js"), "bottom")
+@Html.Script(Url.WidgetContent("assets/magnific/jquery.magnific-popup.min.js"), "bottom", false)
+@Html.Script(Url.WidgetContent("Mvc/Scripts/ImageGallery/overlay-gallery.js"), "bottom", false)
 
-<div class="sf-Gallery-thumbs-container">
-  <div class="sf-Gallery-thumbs clearfix @Model.CssClass">
-    @{int itemIndex = 0;}
+<div class="@Model.CssClass">
     @foreach (var item in Model.Items)
     {
-        <a class="pull-left text-center image-link"
-            href="@(((ThumbnailViewModel)item).MediaUrl)"
+        var thumbnailViewModel = (ThumbnailViewModel)item;
+        
+        <a class="image-link"
+            href="@(thumbnailViewModel.MediaUrl)"
             title="@item.Fields.AlternativeText">
-            <img src="@(((ThumbnailViewModel)item).ThumbnailUrl)" data-detail-url="@HyperLinkHelpers.GetDetailPageUrl(item, ViewBag.DetailsPageId, ViewBag.OpenInSamePage, Model.UrlKeyPrefix, itemIndex)" alt="@item.Fields.AlternativeText" />
+            <img src="@(thumbnailViewModel.ThumbnailUrl)" 
+                 data-detail-url="@HyperLinkHelpers.GetDetailPageUrl(item, ViewBag.DetailsPageId, ViewBag.OpenInSamePage, Model.UrlKeyPrefix)" 
+                 alt="@item.Fields.AlternativeText"
+                      @Html.GetWidthAttributeIfExists(thumbnailViewModel.Width)
+                      @Html.GetHeightAttributeIfExists(thumbnailViewModel.Height) @Html.GetDetailsImageWidthAttributeIfExists(thumbnailViewModel.DetailsImageWidth) />
         </a>
-        itemIndex++;
     }
-  </div>
 </div>
 
 @if (Model.ShowPager)
