--- a/MVC/Views/Navigation/Dropdown.cshtml
+++ b/MVC/Views/Navigation/Dropdown.cshtml
@@ -1,14 +1,15 @@
-@model Telerik.Sitefinity.Frontend.Navigation.Mvc.Models.INavigationModel
+﻿@model Telerik.Sitefinity.Frontend.Navigation.Mvc.Models.INavigationModel
 
 @using Telerik.Sitefinity.Frontend.Mvc.Helpers;
 @using Telerik.Sitefinity.Frontend.Navigation.Mvc.Models;
 @using Telerik.Sitefinity.Modules.Pages;
 
 @*Add scripts and stylesheets*@
-@Html.Script(ScriptRef.JQuery, "top")
-@Html.Script(Url.WidgetContent("assets/dist/js/foundation.min.js"), "top")
+@Html.Script(ScriptRef.JQuery, "top", false)
 
-<select class="nav-select">
+@Html.Script(Url.WidgetContent("Mvc/Scripts/Navigation.js"), "bottom", false)
+
+<select class="nav-select form-control">
     @foreach (var node in Model.Nodes)
     {
         @RenderSubLevelsRecursive(node, "");
@@ -21,7 +22,8 @@
     var selectedAttribute = "";
     prefix += "-";
 
-    if (Model.CurrentSiteMapNode != null && node.OriginalSiteMapNode !=null && Model.CurrentSiteMapNode.Key == node.OriginalSiteMapNode.Key)
+    if (Model.CurrentSiteMapNode != null && node.OriginalSiteMapNode !=null &&
+        Model.CurrentSiteMapNode.Key == node.OriginalSiteMapNode.Key)
     {
         selectedAttribute = "selected";
     }
@@ -46,3 +48,4 @@
         @Html.Raw("active");
     }
 }
+
