--- a/MVC/Views/ImageGallery/List.SimpleList.cshtml
+++ b/MVC/Views/ImageGallery/List.SimpleList.cshtml
@@ -1,19 +1,23 @@
-@model Telerik.Sitefinity.Frontend.Mvc.Models.ContentListViewModel
+﻿@model Telerik.Sitefinity.Frontend.Mvc.Models.ContentListViewModel
 
 @using Telerik.Sitefinity;
+@using Telerik.Sitefinity.Frontend.Media.Mvc.Helpers;
 @using Telerik.Sitefinity.Frontend.Mvc.Helpers;
 @using Telerik.Sitefinity.Modules.Pages;
 @using Telerik.Sitefinity.Frontend.Media.Mvc.Models.ImageGallery;
 
-@Html.Script(ScriptRef.JQuery, "top")
+@Html.Script(ScriptRef.JQuery, "top", false)
 
-
-<div class="clearfix @Model.CssClass">
+<div class="@Model.CssClass">
 
     @foreach (var item in Model.Items)
     {
-    <a class="pull-left text-center" title="@(string.IsNullOrEmpty(item.Fields.Description) ? item.Fields.Title : item.Fields.Description)">
-      <img src="@(((ThumbnailViewModel)item).ThumbnailUrl)" alt='@System.Text.RegularExpressions.Regex.Replace(item.Fields.AlternativeText, @"[^\w\d_-]", "")' />
+        var thumbnailViewModel = (ThumbnailViewModel)item;
+        
+    <a title="@(string.IsNullOrEmpty(item.Fields.Description) ? item.Fields.Title : item.Fields.Description)">
+      <img src="@(thumbnailViewModel.ThumbnailUrl)" alt='@System.Text.RegularExpressions.Regex.Replace(item.Fields.AlternativeText, @"[^\w\d_-]", "")' 
+                @Html.GetWidthAttributeIfExists(thumbnailViewModel.Width)
+                @Html.GetHeightAttributeIfExists(thumbnailViewModel.Height) />
     </a>
     }
 </div>
@@ -27,3 +31,4 @@
            redirectUrlTemplate = ViewBag.RedirectPageUrlTemplate
        })
 }
+
