--- a/MVC/Views/ImageGallery/List.ThumbnailStrip.cshtml
+++ b/MVC/Views/ImageGallery/List.ThumbnailStrip.cshtml
@@ -1,4 +1,4 @@
-@model Telerik.Sitefinity.Frontend.Mvc.Models.ContentListViewModel
+﻿@model Telerik.Sitefinity.Frontend.Mvc.Models.ContentListViewModel
 
 @using Telerik.Sitefinity.Frontend.Mvc.Models;
 @using System.Web.Script.Serialization;
@@ -10,8 +10,8 @@
 @using System.Linq;
 
 @*Add scripts and stylesheets*@
-@Html.Script(ScriptRef.JQuery, "top")
-@Html.Script(Url.WidgetContent("Mvc/Scripts/ImageGallery/thumbnail-strip.js"), "bottom")
+@Html.Script(ScriptRef.JQuery, "top", false)
+@Html.Script(Url.WidgetContent("Mvc/Scripts/ImageGallery/thumbnail-strip.js"), "bottom", false)
 
 @{
     bool hasItems = Model.Items.Count() > 0;
@@ -22,53 +22,63 @@
     {
         firstItem = Model.Items.FirstOrDefault();
     }
-}
 
-<div class="sf-Gallery sf-Gallery--strip">
+    ThumbnailViewModel thumbnailViewModel = (ThumbnailViewModel)firstItem;
+}
 
 @if (hasItems)
 {
-		if (isBackendDesignMode)
-		{
-	<h2 class="js-Gallery-title">@firstItem.DataItem.Title</h2>
+        if (isBackendDesignMode)
+        {
+    <h2 class="js-Gallery-title">@firstItem.DataItem.Title</h2>
 
-	<p class="js-Gallery-description">@firstItem.DataItem.Description</p>
+    <p class="js-Gallery-description">@firstItem.DataItem.Description</p>
 
-	<div><span class="js-Gallery-index">1</span> of @Model.Items.Count()</div>
+    <div><span class="js-Gallery-index">1</span> of @Model.Items.Count()</div>
 
-	<p class="sf-Gallery-image js-Gallery-image">
-		<a class='js-Gallery-prev sf-Gallery-prev'></a>
-		<a class='js-Gallery-next sf-Gallery-next'></a>
-		<img src="@(((ThumbnailViewModel)firstItem).MediaUrl)" title="@firstItem.DataItem.Title" alt="@firstItem.DataItem.AlternativeText" />
-	</p>		}
-		else
-		{
-	<h2 class="js-Gallery-title"></h2>
+    <p class="js-Gallery-image">
+        <a href="javascript:void(0)" class='js-Gallery-prev'>Prev</a>
+        <a href="javascript:void(0)" class='js-Gallery-next'>Next</a>
+        <img src="@(thumbnailViewModel.MediaUrl)" title="@firstItem.DataItem.Title" alt="@firstItem.DataItem.AlternativeText" 
+                  @Html.GetWidthAttributeIfExists(thumbnailViewModel.Width)
+                  @Html.GetHeightAttributeIfExists(thumbnailViewModel.Height) />
+    </p>
+        }
+        else
+        {
+    <h2 class="js-Gallery-title"></h2>
 
-	<p class="js-Gallery-description"></p>
+    <p class="js-Gallery-description"></p>
 
-	<div><span class="js-Gallery-index"></span> of @Model.Items.Count()</div>
+    <div><span class="js-Gallery-index"></span> of @Model.Items.Count()</div>
 
-	<p class="sf-Gallery-image js-Gallery-image">
-		<a class='js-Gallery-prev sf-Gallery-prev'></a>
-		<a class='js-Gallery-next sf-Gallery-next'></a>
-		<img />
-	</p>
-		}
+    <p class="js-Gallery-image">
+        <a href="javascript:void(0)" class='js-Gallery-prev'>Prev</a>
+        <a href="javascript:void(0)" class='js-Gallery-next'>Next</a>
+        <img />
+    </p>
+    }
 }
 
 
-
-	<div class="sf-Gallery-thumbs-container">
-		<div class="sf-Gallery-thumbs js-Gallery-thumbs clearfix">
-		@{int itemIndex = 0;}
-		@foreach(var item in Model.Items)
-		{
-			<a title="@item.Fields.Title" data-item="@Html.GetSerializedImage(item)" data-detail-url="@HyperLinkHelpers.GetDetailPageUrl(item, ViewBag.DetailsPageId, ViewBag.OpenInSamePage, Model.UrlKeyPrefix, itemIndex)">
-				<img src="@(((ThumbnailViewModel)item).ThumbnailUrl)"  alt="@item.Fields.AlternativeText"/>
-			</a>
-			itemIndex++;
-		}
-		</div>
-	</div>
+<div class="js-Gallery-thumbs">
+@foreach(var item in Model.Items)
+{
+    var itemViewModel = (ThumbnailViewModel)item;
+    
+    <a title="@item.Fields.Title" data-item="@Html.GetSerializedImage(item)" data-detail-url="@HyperLinkHelpers.GetDetailPageUrl(item, ViewBag.DetailsPageId, ViewBag.OpenInSamePage, Model.UrlKeyPrefix)">
+        <img src="@(itemViewModel.ThumbnailUrl)" alt="@item.Fields.AlternativeText" 
+                      @Html.GetWidthAttributeIfExists(itemViewModel.Width)
+                      @Html.GetHeightAttributeIfExists(itemViewModel.Height) />
+    </a>
+}
 </div>
+@if (Model.ShowPager)
+{
+    @Html.Action("Index", "ContentPager", new
+       {
+           currentPage = Model.CurrentPage,
+           totalPagesCount = Model.TotalPagesCount.Value,
+           redirectUrlTemplate = ViewBag.RedirectPageUrlTemplate
+       })
+}
