--- a/MVC/Views/Navigation/NavigationView.Sitemap.cshtml
+++ b/MVC/Views/Navigation/NavigationView.Sitemap.cshtml
@@ -1,15 +1,18 @@
-@model Telerik.Sitefinity.Frontend.Navigation.Mvc.Models.INavigationModel
+﻿@model Telerik.Sitefinity.Frontend.Navigation.Mvc.Models.INavigationModel
 
 @using Telerik.Sitefinity.Frontend.Mvc.Helpers;
 @using Telerik.Sitefinity.Frontend.Navigation.Mvc.Models;
 @using Telerik.Sitefinity.Modules.Pages;
 
 @*Add scripts and stylesheets*@
+@Html.Script(ScriptRef.JQuery, "top", false)
+
+@Html.Script(Url.WidgetContent("Mvc/Scripts/Navigation.js"), "bottom", false)
 
 <div class="@Model.CssClass">
-    <div class="show-for-small-only">@Html.Action("GetView", new { viewName = "Dropdown", model= Model})</div>
+    @Html.Action("GetView", new { viewName = "Dropdown", model= Model})
 
-    <ul class="sitemap hide-for-small-only">
+    <ul>
         @foreach (var node in Model.Nodes)
         {
             @RenderRootLevelNode(node);
@@ -49,3 +52,4 @@
         }
     </li>
 }
+
