--- a/MVC/Views/News/List.NewsList.cshtml
+++ b/MVC/Views/News/List.NewsList.cshtml
@@ -1,40 +1,47 @@
-@model Telerik.Sitefinity.Frontend.Mvc.Models.ContentListViewModel
+﻿@model Telerik.Sitefinity.Frontend.Mvc.Models.ContentListViewModel
 
 @using Telerik.Sitefinity.Frontend.Mvc.Helpers;
 @using Telerik.Sitefinity.Modules.Pages;
 @using Telerik.Sitefinity.Web.DataResolving;
 
+@Html.Script(ScriptRef.JQuery, "top", false)
+
 <div class="@Model.CssClass">
-    <ul class="no-bullet News">
+    <ul>
+
         @foreach (var item in Model.Items)
         {
-			var navigateUrl = HyperLinkHelpers.GetDetailPageUrl(item, ViewBag.DetailsPageId, ViewBag.OpenInSamePage, Model.UrlKeyPrefix);
-		
-			<li @Html.InlineEditingAttributes(Model.ProviderName, Model.ContentType.FullName, (Guid)item.Fields.Id)>
-				<h5>
-					<a @Html.InlineEditingFieldAttributes("Title", "ShortText") href="@navigateUrl">@item.Fields.Title</a>
-					
-				</h5>
+            var navigateUrl = HyperLinkHelpers.GetDetailPageUrl(item, ViewBag.DetailsPageId, ViewBag.OpenInSamePage, Model.UrlKeyPrefix);
+            
+            <li @Html.InlineEditingAttributes(Model.ProviderName, Model.ContentType.FullName, (Guid)item.Fields.Id)>
+                <h3>
+                    <a @Html.InlineEditingFieldAttributes("Title", "ShortText") href="@navigateUrl">@item.Fields.Title</a>
+                    
+                </h3>
 
-				<div class="News-author">
-					@item.GetDateTime("PublicationDate", "MMM d, yyyy, HH:mm tt")
-					@Html.Resource("By")
-					@DataResolver.Resolve(item.DataItem, "Author", null)
+                <div>
+                    @item.GetDateTime("PublicationDate", "MMM d, yyyy, HH:mm tt")
+                    @Html.Resource("By")
+                    @DataResolver.Resolve(item.DataItem, "Author", null)
+
                     @Html.CommentsCount((string)navigateUrl, item.DataItem)
-				</div>
+                </div>
 
-				<div @Html.InlineEditingFieldAttributes("Summary", "ShortText")>@Html.Raw(item.Fields.Summary)</div>
+                <div @Html.InlineEditingFieldAttributes("Summary", "ShortText")>@Html.Raw(item.Fields.Summary)</div>
 
-				<a href="@navigateUrl">@Html.Resource("FullStory")</a>
-			</li>
+                <a href="@navigateUrl">@Html.Resource("FullStory")</a>
+            </li>
         }
     </ul>
 
     @if (Model.ShowPager)
     {
-        @Html.Action("Index", "ContentPager", new { currentPage = Model.CurrentPage,
-                        totalPagesCount = Model.TotalPagesCount.Value,
-                        redirectUrlTemplate = ViewBag.RedirectPageUrlTemplate })
+        @Html.Action("Index", "ContentPager", new
+           {
+               currentPage = Model.CurrentPage,
+               totalPagesCount = Model.TotalPagesCount.Value,
+               redirectUrlTemplate = ViewBag.RedirectPageUrlTemplate
+           })
     }
-
 </div>
+
