--- a/MVC/Views/SearchBox/SearchBox.cshtml
+++ b/MVC/Views/SearchBox/SearchBox.cshtml
@@ -4,22 +4,20 @@
 @using Telerik.Sitefinity.Modules.Pages;
 @using Telerik.Sitefinity.Frontend.Mvc.Helpers;
 
+@Html.StyleSheet(Url.WidgetContent("assets/dist/css/sf-search-box.min.css"), "head", false)
+
 @{
     var searchTextBoxId = Guid.NewGuid();
     var searchButtonId = Guid.NewGuid();
  }
 
 @(!String.IsNullOrEmpty(Model.CssClass) ?
-    Html.Raw(String.Format("<div class=\"{0} row collapse\">", Model.CssClass)) :
-    Html.Raw("<div class=\"row collapse\">"))
-    <div class="small-10 columns">
-        <input type="search" placeholder="@Model.BackgroundHint" id="@Html.Raw(searchTextBoxId)" title="@Html.Resource("SearchInput")" value="@Html.Raw(ViewBag.SearchQuery)"/>
-    </div>
-    <div class="small-2 columns">
-        <button type="button" class="button postfix" id="@Html.Raw(searchButtonId)">@Html.Resource("SearchLabel")</button>
-    </div>
-	
-	<input type="hidden" data-sf-role="resultsUrl" value="@Html.Raw(Model.ResultsUrl)" />
+    Html.Raw(String.Format("<div class=\"{0}\">", Model.CssClass)) :
+    Html.Raw("<div>"))
+    <input type="text" title="@Html.Resource("SearchInput")" placeholder="@Model.BackgroundHint" id="@Html.Raw(searchTextBoxId)" value="@Html.Raw(ViewBag.SearchQuery)"/>
+    <button type="button" id="@Html.Raw(searchButtonId)">@Html.Resource("SearchLabel")</button>
+
+    <input type="hidden" data-sf-role="resultsUrl" value="@Html.Raw(Model.ResultsUrl)" />
     <input type="hidden" data-sf-role="indexCatalogue" value="@Html.Raw(Model.IndexCatalogue)" />
     <input type="hidden" data-sf-role="wordsMode" value="@Html.Raw(Model.WordsMode.ToString())" />
     <input type="hidden" data-sf-role="disableSuggestions" value='@(Model.DisableSuggestions ? Html.Raw("true") : Html.Raw("false"))' />
@@ -31,9 +29,12 @@
     <input type="hidden" data-sf-role="searchButtonId" value='@("#" + searchButtonId.ToString())' />
 </div>
 
-@* The inline editing functionality is loading jQuery too. *@
+@* Avoid conflicts because the designer is loading kendo too. *@
+@if (!SystemManager.IsDesignMode)
+{
+    @Html.Script(ScriptRef.JQuery, "top", false)
+    @Html.Script(ScriptRef.JQueryUI, "top", false)
+}
 
-@Html.Script(ScriptRef.JQuery, "top", true)
-@Html.Script(ScriptRef.JQueryUI, "top", true)
+@Html.Script(Url.WidgetContent("Mvc/Scripts/SearchBox/Search-box.js"), "bottom", false)
 
-@Html.Script(Url.WidgetContent("Mvc/Scripts/SearchBox/Search-box.js"), "bottom")
