--- a/MVC/Views/SearchResults/SearchResults.cshtml
+++ b/MVC/Views/SearchResults/SearchResults.cshtml
@@ -5,30 +5,32 @@
 @using Telerik.Sitefinity.Modules.Pages;
 @using Telerik.Sitefinity.Modules.Libraries;
 @using Telerik.Sitefinity.Libraries.Model;
+@using Telerik.Sitefinity.Services;
 
-<div class="row @Model.CssClass">
+@if (!SystemManager.IsDesignMode)
+{
+    @Html.Script(ScriptRef.JQuery, "top", false)
+}
 
-    <div class="row">
+<div class="@Model.CssClass">
 
-        <div class="large-7 columns">
-            @if (@Model.Results.TotalCount > 0)
-            {
-                if(ViewBag.IsFilteredbyPermission)
-                {
-                    <h1>@Html.Raw(Model.ResultText)</h1>
-                }
-                else
-                {
-                    <h1>@Model.Results.TotalCount @Html.Raw(Model.ResultText)</h1>
-                }
-            }
-            else
-            {
-            <h1>@Html.Resource("No") @Html.Raw(Model.ResultText)</h1>
-            }
-        </div>
+    @if (@Model.Results.TotalCount > 0)
+    {
+        if(ViewBag.IsFilteredbyPermission)
+		{
+			<h1>@Html.Raw(Model.ResultText)</h1>
+		}
+		else
+		{
+			<h1>@Model.Results.TotalCount @Html.Raw(Model.ResultText)</h1>
+		}
+    }
+    else
+    {
+        <h1>@Html.Resource("No") @Html.Raw(Model.ResultText)</h1>
+    }
 
-        <div class="large-5 columns">
+    <div>
         @if (Model.AllowSorting && @Model.Results.TotalCount > 0)
         {
             <label>@Html.Resource("SortBy")
@@ -39,8 +41,6 @@
                 </select>
             </label>
         }
-
-        </div>
     </div>
 
     @if (Model.Languages.Length > 1)
@@ -62,53 +62,43 @@
         </div>
     }
 
-    <ul class="no-bullet media-list sf-search-results">
-        @foreach (var item in Model.Results.Data)
-        {
-            var hasLink = item.GetValue("Link") != null && !String.IsNullOrEmpty(item.GetValue("Link").ToString());
+    @foreach (var item in Model.Results.Data)
+    {
+        <div>
 
-            <li class="media sf-media">
-                @if (((Telerik.Sitefinity.Services.Search.Model.Document)item).ItemType.ToString() == typeof(Telerik.Sitefinity.Libraries.Model.Image).ToString())
+            @if (((Telerik.Sitefinity.Services.Search.Model.Document)item).ItemType.ToString() == typeof(Telerik.Sitefinity.Libraries.Model.Image).ToString())
+            {
+                <div>
+                    <a href="@item.GetValue("Link")">
+                        <img src="@item.GetValue("Link")" alt="@item.GetValue("Title")" width="120"/>
+                    </a>
+                </div>
+            }
+
+            else if (((Telerik.Sitefinity.Services.Search.Model.Document)item).ItemType.ToString() == typeof(Telerik.Sitefinity.Libraries.Model.Video).ToString())
+            {
+                //libraries manager will be instantiated on each loop through the foreach
+                LibrariesManager librariesManager = LibrariesManager.GetManager();
+                var videoTmbId = new Guid((string)item.GetValue("Id"));
+                Video video = librariesManager.GetVideo(videoTmbId);
+
+                if (video != null)
                 {
-                    <div class="left sf-img-thmb">
-                        <a  href="@item.GetValue("Link")">
-                            <img src="@item.GetValue("Link")" alt="@item.GetValue("Title")" width="120"/>
+                    var thumbUrl = video.ThumbnailUrl;
+
+                    <div>
+                        <a href="@item.GetValue("Link")">
+                            <img src="@thumbUrl" alt="@item.GetValue("Title")" width="120"/>
                         </a>
                     </div>
-
                 }
+            }
 
-                else if (((Telerik.Sitefinity.Services.Search.Model.Document)item).ItemType.ToString() == typeof(Telerik.Sitefinity.Libraries.Model.Video).ToString())
-                {
-                    LibrariesManager librariesManager = LibrariesManager.GetManager();
-                    var videoTmbId = new Guid((string)item.GetValue("Id"));
-                    Video video = librariesManager.GetVideo(videoTmbId);
-                    if (video != null)
-                    {
-                        var thumbUrl = video.ThumbnailUrl;
-
-                        <div class="left sf-video-thmb">
-
-                            <a href="@item.GetValue("Link")">
-                                <img src="@thumbUrl" alt="@item.GetValue("Title")" width="120"/>
-
-                                <div class="sf-icon-play"></div>
-
-                            </a>
-
-                        </div>
-
-                    }
-
+            <div>
+                @{
+                    var hasLink = item.GetValue("Link") != null && !String.IsNullOrEmpty(item.GetValue("Link").ToString());
                 }
-
-                else
-                {
-
-                }
-
-                <div class="sf-media-body media-body">
-                    <h3>
+                <h3>
                     @if (hasLink)
                     {
                         <a href="@item.GetValue("Link")">@item.GetValue("Title")</a>
@@ -117,37 +107,33 @@
                     {
                         @item.GetValue("Title")
                     }
-                    </h3>
-                    <p>@Html.Raw(item.GetValue("HighLighterResult"))</p>
-                    @if (hasLink)
-                    {
+                </h3>
+
+                <p>@Html.Raw(item.GetValue("HighLighterResult"))</p>
+                @if (hasLink)
+                {
                     <a href="@item.GetValue("Link")">@item.GetValue("Link")</a>
-                    }
-                </div>
-            </li>
-            }
-    </ul>
-    
+                }
+            </div>
+        </div>
+    }
+
     @if (Model.DisplayMode == ListDisplayMode.Paging && Model.TotalPagesCount != null && Model.TotalPagesCount > 1)
     {
         if(ViewBag.IsFilteredbyPermission) 
-        {
-             <ul class="pagination">
-                @if (Model.CurrentPage > 1)
+	    {
+            <div class="pagination">
+				@if (Model.CurrentPage > 1)
 				{
-                    <li>
-					    <a href='@string.Format(ViewBag.RedirectPageUrlTemplate, Model.CurrentPage - 1)'>@Html.Resource("Prev")</a>
-                    </li>
+					<a class="item" href='@string.Format(ViewBag.RedirectPageUrlTemplate, Model.CurrentPage - 1)'>@Html.Resource("Prev")</a>
 				}
-                @if (Model.CurrentPage < @Model.TotalPagesCount)
+				@if (Model.CurrentPage < @Model.TotalPagesCount)
 				{
-                    <li>
-                        <a href='@string.Format(ViewBag.RedirectPageUrlTemplate, Model.CurrentPage + 1)'>@Html.Resource("Next")</a>
-                    </li>
+                    <a class="item" href='@string.Format(ViewBag.RedirectPageUrlTemplate, Model.CurrentPage + 1)'>@Html.Resource("Next")</a>
 				}
-            </ul>
-        }
-        else 
+			</div>
+	    }
+        else
         {
             if (Model.CurrentPage == Model.TotalPagesCount)
             {
@@ -157,7 +143,7 @@
             {
                 <em>@Model.ItemsPerPage of @Model.Results.TotalCount results</em>
             }
-
+        
             @Html.Action("Index", "ContentPager", new
             {
                 currentPage = Model.CurrentPage,
@@ -166,14 +152,14 @@
             })
         }
     }
-		
-    <input type="hidden" data-sf-role="searchResOrderBy" value='@Request.QueryString["orderBy"]' />
-    <input type="hidden" data-sf-role="searchResLanguage" value='@Request.QueryString["language"]' />
-    <input type="hidden" data-sf-role="searchResIndexCatalogue" value='@Request.QueryString["indexCatalogue"]' />
+   
+    <input type="hidden" data-sf-role="searchResOrderBy" value="@Request.QueryString["orderBy"]" />
+    <input type="hidden" data-sf-role="searchResLanguage" value="@Request.QueryString["language"]" />
+    <input type="hidden" data-sf-role="searchResIndexCatalogue" value="@Request.QueryString["indexCatalogue"]" />
     <input type="hidden" data-sf-role="searchResQuery" value='@Request.QueryString["searchQuery"]' />
     <input type="hidden" data-sf-role="searchResWordsMode" value='@Request.QueryString["wordsMode"]' />
 
 </div>
 
-@Html.Script(ScriptRef.JQuery, "top")
-@Html.Script(Url.WidgetContent("Mvc/Scripts/SearchResults/Search-results.js"), "bottom")
+@Html.Script(Url.WidgetContent("Mvc/Scripts/SearchResults/Search-results.js"), "bottom", false)
+
