Add all default views

--- a/MVC/Views/Layouts/default.cshtml
+++ b/MVC/Views/Layouts/default.cshtml
@@ -4,22 +4,21 @@
 @using Telerik.Sitefinity.UI.MVC;
 @using Telerik.Sitefinity.Services;
 
-<!doctype html>
-<html class="no-js" @Html.RenderLangAttribute()>
+<!DOCTYPE html>
+<html @Html.RenderLangAttribute()>
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
 
     @Html.Section("head")
-    @Html.StyleSheet(Url.Content("~/ResourcePackages/Classic/assets/dist/css/styles.min.css"), "head")
+    @Html.StyleSheet(Url.WidgetContent("~/ResourcePackages/Minimal/assets/dist/css/main.min.css"), "head")
 </head>
 
 <body>
     @Html.Section("top")
 
-    <div class="sfPublicWrapper" id="PublicWrapper">
+    <div id="PublicWrapper">
         @Html.SfPlaceHolder("Contentplaceholder1")
     </div>
 
@@ -38,7 +37,5 @@
     }
 
     @Html.Section("bottom")
-    @Html.Script(Url.Content("~/ResourcePackages/Classic/assets/dist/js/foundation.min.js"), "bottom")
-    @Html.Script(Url.Content("~/ResourcePackages/Classic/assets/dist/js/foundation.init.js"), "bottom")
 </body>
 </html>
