--- a/MVC/Views/LoginForm/LoginForm.LoginForm.cshtml
+++ b/MVC/Views/LoginForm/LoginForm.LoginForm.cshtml
@@ -19,7 +19,7 @@
          @Html.ValidationSummary(true)
             <h3>@Html.Resource("LoginFormLogInLegendHeader")</h3>
 
-            @if (Request.Url.Query.Contains("err=true") || Model.LoginError)
+            if (Request.Url.Query.Contains("err=true") || Model.LoginError)
             {
                 <p>@Html.Resource("IncorrectCredentialsMessage")</p>
             }
