--- a/MVC/Views/BlogPost/List.BlogPostList.cshtml
+++ b/MVC/Views/BlogPost/List.BlogPostList.cshtml
@@ -7,28 +7,26 @@
 
 @Html.Script(ScriptRef.JQuery, "top", false)
 
-<div class="@Model.CssClass">
+<section class="post_lst @Model.CssClass">
     <ul>
 
         @foreach (var item in Model.Items)
         {
             var navigateUrl = HyperLinkHelpers.GetDetailPageUrl(item, ViewBag.DetailsPageId, ViewBag.OpenInSamePage, Model.UrlKeyPrefix);
-            <li @Html.InlineEditingAttributes(Model.ProviderName, Model.ContentType.FullName, (Guid)item.Fields.Id)>
-                <h3>
-                    <a @Html.InlineEditingFieldAttributes("Title", "ShortText") href="@navigateUrl">@item.Fields.Title</a>
-                </h3>
-
-
-                <div>
-                    @item.GetDateTime("PublicationDate", "MMM d, yyyy, HH:mm tt")
-                    @Html.Resource("By")
-                    @DataResolver.Resolve(item.DataItem, "Author", null)
-                    @Html.CommentsCount((string)navigateUrl, item.DataItem)
-                </div>
-
-                <div @Html.InlineEditingFieldAttributes("Summary", "ShortText")>@Html.Raw(item.Fields.Summary)</div>
-
-                <a href="@navigateUrl">@Html.Resource("FullStory")</a>
+            <li @Html.InlineEditingAttributes(Model.ProviderName, Model.ContentType.FullName, (Guid) item.Fields.Id)>
+                <aritcle class="post_lst-itm">
+                    <h1 class="post_lst-itm-hdg">
+                        <a @Html.InlineEditingFieldAttributes("Title", "ShortText") href="@navigateUrl">@item.Fields.Title</a>
+                    </h1>
+                    <div class="post_lst-itm-meta">
+                        @item.GetDateTime("PublicationDate", "MMM d, yyyy, HH:mm tt")
+                        @Html.Resource("By")
+                        @DataResolver.Resolve(item.DataItem, "Author", null)
+                        @Html.CommentsCount((string) navigateUrl, item.DataItem)
+                    </div>
+                    <div @Html.InlineEditingFieldAttributes("Summary", "ShortText") class="post_lst-desc">@Html.Raw(item.Fields.Summary)</div>
+                    <a href="@navigateUrl" class="button small">@Html.Resource("FullStory")</a>
+                </aritcle>
             </li>
         }
     </ul>
@@ -36,11 +34,11 @@
     @if (Model.ShowPager)
     {
         @Html.Action("Index", "ContentPager", new
-           {
-               currentPage = Model.CurrentPage,
-               totalPagesCount = Model.TotalPagesCount.Value,
-               redirectUrlTemplate = ViewBag.RedirectPageUrlTemplate
-           })
+   {
+       currentPage = Model.CurrentPage,
+       totalPagesCount = Model.TotalPagesCount.Value,
+       redirectUrlTemplate = ViewBag.RedirectPageUrlTemplate
+   })
     }
-</div>
+</section>
 
