--- a/MVC/Views/Layouts/default.cshtml
+++ b/MVC/Views/Layouts/default.cshtml
@@ -11,8 +11,9 @@
     <meta charset="utf-8" />
     <title></title>
 
+    <link href="https://fonts.googleapis.com/css?family=Amaranth:700|Titillium+Web:400,400i,700,700i" rel="stylesheet">
     @Html.Section("head")
-    @Html.StyleSheet(Url.WidgetContent("~/ResourcePackages/Minimal/assets/dist/css/main.min.css"), "head")
+    @Html.StyleSheet(Url.Content("~/ResourcePackages/FoundationSix/assets/dist/css/main.min.css"), "head")
 </head>
 
 <body>
